<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--
                dummy data of instruction1 screen
        -->

        <TextView
            android:id="@+id/instruction1"
            android:text="@string/instruction1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/HeaderTextStyle" />

        <!--
             Another  dummy data of instruction2 screen
       -->
        <TextView
            android:id="@+id/instruction2"
            android:text="@string/instruction2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction1"
            style="@style/Header2TextStyle" />

        <!--
               To navigate shoe list screen
       -->
        <Button
            android:id="@+id/grabShoe"
            android:layout_marginBottom="@dimen/default_margin"
            android:contentDescription="@string/go_to_shopping_list"
            style="@style/defaultButtonStyle"
            android:text="@string/go_to_shoe_list"
            app:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>